# VenezuelaDataCleanHub-spec

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  alembic.ini  pyproject.toml
.github/ISSUE_TEMPLATE/: good-first-issue.md  multimodal-review.md  openclaw-integration.md  security-hardening.md
.github/workflows/: ci.yml
apps/api/: Dockerfile  main.py
docs/: implementation-slice.md  mvp-learnings.md  platform-architecture.md  platform-hardening-spec.md  prototype-learnings.md  references.md  roadmap.md
docs/adr/: 0001-platform-architecture-direction.md
docs/assets/: README.md
docs/development/: local-foundation.md
docs/operations/: openclaw-demo.md  openclaw-operations.md  outreach-brief.md  production-hardening.md
docs/security/: multimodal-review-policy.md  security-and-privacy.md
infra/: docker-compose.yml
infra/keycloak/: vdch-local-realm.json
infra/opa/: policy.rego
migrations/: env.py
migrations/versions/: 0001_initial_foundation.py  0002_duplicate_clusters.py  0003_job_control_events.py  0004_hardening_governance.py  0005_promotion_requests.py  0006_operational_hardening.py
requirements/: constraints.txt
scripts/: security_checks.py  seed_openclaw_demo.py
tests/: conftest.py  test_api_contract.py  test_foundation_slice.py  test_keycloak_realm.py  test_manifest_validation.py  test_oidc_rs256.py  test_opa_policy.py  test_production_surface.py
tests/opa_inputs/: agent_manifest_approve_deny.json  openclaw_start_allow.json
workers/: run_job_once.py  temporal_worker.py  workflows.py
