[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "venezuela-data-clean-hub"
version = "0.1.0"
description = "Production-shaped foundation for VenezuelaDataCleanHub."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.115",
  "httpx>=0.27",
  "pydantic-settings>=2.4",
  "psycopg[binary]>=3.2",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0",
  "temporalio>=1.7",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx2>=2.5",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[tool.setuptools.packages.find]
include = ["vdch*"]
where = ["packages"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["packages", "."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
